[STYLE] fixed issue where project name overflows from the container

--- a/client/src/style/Dashboard/projectCard.scss
+++ b/client/src/style/Dashboard/projectCard.scss
@@ -13,6 +13,16 @@
     padding: 1rem;
     cursor: pointer;
 
+
+    .projects-list-item-title {
+        word-wrap: break-word;
+        width: 90%;
+        height: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
     .projects-list-item-delete {
         position: absolute;
         color: white;
